# Darwin_SSL_sniffer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
darwin_ssl_sniffer/: __main__.py  exceptions.py  sniffer.py  ssl_session.py  syslog_parser.py
iosslsniffer/: __main__.py  sniffer.py  ssl_session.py  syslog_parser.py  tcp_simulation.py
tests/: test_filters.py  test_parser.py
