[project]
name = "darwin-ssl-sniffer"
version = "0.0.3"
description = "Sniffer for encrypted traffic on darwin-based platforms"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["ios", "jailbreak", "ssl", "sniffer", "tls", "cli", "automation","darwin","osx","macos"]
authors = [
    { name = "netanelc305", email = "netanelc305@protonmail.com" },
    { name = "doronz88", email = "doron88@gmail.com" },
]
maintainers = [
    { name = "netanelc305", email = "netanelc305@protonmail.com" },
    { name = "doronz88", email = "doron88@gmail.com" },
]
classifiers = [
    "Operating System :: iOS",
    "Operating System :: MacOS",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/netanelc305/Darwin_SSL_sniffer"
"Bug Reports" = "https://github.com/netanelc305/Darwin_SSL_sniffer/issues"

[project.scripts]
pybinpack = "darwin_ssl_sniffer.__main__:cli"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"